--- a/tasks_api/package.json
+++ b/tasks_api/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
       "@types/node": "^8.0.29",
+      "nodemon": "^2.0.12",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
@@ -16,6 +17,7 @@
       "typeorm": "0.2.34"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "dev": "nodemon src/index.ts"
    }
 }
